# rhyph

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml  nginx.conf
crates/api/: Cargo.toml
crates/api/src/: error.rs  lib.rs
crates/api/src/middleware/: auth.rs  error.rs  mod.rs  organizer.rs  rate_limit.rs
crates/api/src/routes/: admin.rs  auth.rs  cart.rs  checkin.rs  events.rs  federation.rs  mod.rs  orders.rs
crates/api/src/services/: auth.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/db/: mod.rs  queries.rs
crates/core/src/db/migrations/: 20260706000001_initial_schema.sql  20260706000002_auth.sql  20260706000003_remove_placeholder_admin.sql  20260707000001_organizer_storefront.sql  20260707000002_organizer_images.sql  20260707000003_custom_spa.sql
crates/core/src/models/: checkin.rs  device.rs  event.rs  image.rs  item.rs  mod.rs  order.rs  organizer.rs  quota.rs  seating.rs  user.rs
crates/core/src/services/: cart.rs  checkin.rs  mod.rs  orders.rs  payments.rs  pricing.rs  quotas.rs  seating.rs  tickets.rs
crates/core/tests/: cart_order_pipeline.rs
crates/federation/: Cargo.toml
crates/federation/src/: activity_pub.rs  audience.rs  lib.rs  publisher.rs  transmogrifier.rs
crates/federation/src/actions/: announce.rs  create.rs  delete.rs  follow.rs  mod.rs  update.rs
crates/federation/src/converter/: actor.rs  event.rs  mod.rs  ticket.rs
crates/hashpw/: Cargo.toml
crates/hashpw/src/: main.rs
crates/payments/: Cargo.toml
crates/payments/src/: lib.rs  stripe.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  main.rs  spa_config.rs
custom-spas/neon-cathedral/: package-lock.json  package.json  vite.config.ts
custom-spas/neon-cathedral/src/: app.html
custom-spas/neon-cathedral/src/lib/: api.ts
custom-spas/neon-cathedral/src/routes/: +layout.svelte  +page.svelte
custom-spas/neon-cathedral/src/routes/cart/: +page.svelte
custom-spas/neon-cathedral/src/routes/events/[slug]/: +page.svelte
custom-spas/neon-cathedral/src/routes/orders/[code]/: +page.svelte
docs/: custom-storefronts.md
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
frontend/.svelte-kit/output/client/.vite/: manifest.json
frontend/.svelte-kit/output/client/_app/: version.json
frontend/.svelte-kit/output/client/_app/immutable/chunks/: 2aVgjNbk.js  B3CNlxvm.js  BCtyzSwm.js  BHhz15QU.js  Bun_E-8p.js  CAUCat6v.js  CGxypnqT.js  CKqRd2a3.js  CLiD_ZDp.js  CrNX8pnj.js  D-2PQlz0.js  D4FKaLqW.js  DCfiRYNQ.js  DJaCinOx.js  DM8e9QfZ.js  DSq69CHr.js  DUycVeEF.js  DhABCQbg.js  DiHRwAP5.js  Dm5HE0t9.js  DmcdM0WY.js  EJ8kQeGK.js  RGGvogHq.js  xyZGNo0g.js
frontend/.svelte-kit/output/client/_app/immutable/entry/: app.DIlbe8ux.js  app.V489OoiU.js  start.B1VwWaDI.js  start.DVyN8mA4.js
frontend/.svelte-kit/output/client/_app/immutable/nodes/: 0.24h5NGTI.js  0.CMnAaZQi.js  0.Mz6o58fZ.js  1.CZA8Qwbb.js  1.SRo6yjPH.js  10.e8gldXD8.js  11.BSzKWdpH.js  11.C613WleU.js  14.BnMow1Bs.js  2.GKYRMtkR.js  3.Dyiffo5-.js  3.nn-Ienrg.js  4.CRiWbOO_.js  4.QzwvvVxL.js  5.Bc4nUJeV.js  5.Dfoq1G6P.js  6.BaXrUwx0.js  6.i0emKbL-.js  7.n7H4o5Ea.js  9.B5QHZQ9p.js  (+2 more)
frontend/.svelte-kit/output/server/: index.js  manifest-full.js  manifest.js
frontend/.svelte-kit/output/server/.vite/: manifest.json
frontend/.svelte-kit/output/server/chunks/: index.js  internal.js  root.js
frontend/.svelte-kit/output/server/entries/pages/: _layout.svelte.js  _page.svelte.js
frontend/.svelte-kit/output/server/nodes/: 0.js  1.js  10.js  11.js  12.js  13.js  14.js  2.js  3.js  4.js  5.js  6.js  7.js  8.js  9.js
frontend/.svelte-kit/types/: route_meta_data.json
frontend/.svelte-kit/types/src/routes/: $types.d.ts
frontend/.svelte-kit/types/src/routes/admin/: $types.d.ts
frontend/.svelte-kit/types/src/routes/scan/: $types.d.ts
frontend/src/: app.d.ts  app.html
frontend/src/lib/: api.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/admin/: +layout.svelte
frontend/src/routes/admin/checkin/: +page.svelte
frontend/src/routes/admin/devices/: +page.svelte
frontend/src/routes/admin/events/: +page.svelte
frontend/src/routes/admin/events/[slug]/: +page.svelte
frontend/src/routes/admin/orders/: +page.svelte
frontend/src/routes/admin/organizer/: +page.svelte
frontend/src/routes/cart/: +page.svelte
frontend/src/routes/events/[org]/[slug]/: +page.svelte
frontend/src/routes/login/: +page.svelte  +page.ts
frontend/src/routes/orders/[code]/: +page.svelte
frontend/src/routes/scan/: +layout@.svelte  +page.svelte
scripts/: docker-entrypoint.sh  setup.sh  start.sh
(+19 files in other folders)
