[package]
name = "rhyph-api"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
rhyph-core = { path = "../core" }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
sqlx.workspace = true
tracing.workspace = true
thiserror.workspace = true
