[package]
name = "rhyph-federation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rhyph-core = { path = "../core" }
activitypub_federation.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
