[package]
name = "rhyph-payments"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
rhyph-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
bigdecimal.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
sqlx.workspace = true
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
thiserror.workspace = true
tracing.workspace = true
