[package]
name = "rhyph-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rhyph-core = { path = "../core" }
rhyph-api = { path = "../api" }
rhyph-federation = { path = "../federation" }
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
argon2.workspace = true
rand.workspace = true
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"
